--- a/moveit-next/src/styles/pages/Home.module.css
+++ b/moveit-next/src/styles/pages/Home.module.css
@@ -16,3 +16,15 @@
     gap: 6.25rem;
     align-content: center;
 }
+
+@media(max-width: 800px) {  
+    .container section {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .challengeBox {
+        height: 80vh;
+        margin-bottom: 10vh;
+    }
+}
