--- a/moveit-next/src/styles/components/Nav.module.css
+++ b/moveit-next/src/styles/components/Nav.module.css
@@ -1,3 +1,105 @@
+.Body {
+    display: flex;
+}
+
+.NavBar {
+    position: absolute;
+    z-index: 4;
+
+    height: 100%;
+    width: 8rem;
+    background: var(--white);
+}
+
+.NavBar div:first-child {
+    height: 20%;
+    display: flex;
+    flex-direction: column;
+    padding: 0.5rem;
+    gap: 0.5rem;
+}
+
+.NavBar button {
+    transition: filter 0.2s;
+}
+
+.NavBar button:hover {
+    filter: brightness(0.8);
+}
+
+.NavBar div:first-child button {
+    outline: none;
+    border: none;
+    background: var(--blue);
+    color: var(--white);
+    padding: .5rem;
+}
+
+.NavBar div:first-child img {
+    width: 100%;
+    height: 70px;
+}
+
+.NavContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 75%;
+}
+
+.buttons {
+    border: none;
+    width: 100%;
+    height: 56px;
+    background: var(--white);
+
+}
+
 .ActiveNav {
-    background-color: red;
+    border-left: 5px solid var(--blue);
+}
+
+
+.NavBarOff {
+    position: relative;
+    padding: 0.5rem;
+}
+
+.NavBarOff button {
+    position: absolute;
+    z-index: 2;
+
+    width: 100px;
+
+    border: 0;
+    outline: 0;
+    padding: 0.5rem;
+    border-radius: 5px;
+
+    background: var(--blue-dark);
+    color: var(--white);
+
+    font-family: Inter;
+    font-weight: 600;
+    transition: background-color 0.2s;
+}
+
+
+.NavBar div:last-child {
+    width: 100%;
+    height: 2rem;
+}
+
+.NavBar div:last-child button {
+    width: 100%;
+    height: 100%;
+    outline: none;
+    border: 2px solid var(--blue);
+    font-size: 1.2rem;
+    transition: background 0.2s ;
+}
+
+.NavBar div:last-child button:hover {
+    background-color: var(--blue);
+    color: var(--white)
 }
